<resources>
    <string name="app_name">Tic Tac Toe Notebook</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="select_a_mode">Select a Mode</string>
    <string name="by_sam4rth">www.sam4rth.blogspot.com</string>
    <string name="options">Options</string>
    <string name="pvp">PvP</string>
    <string name="pvc">PvC</string>
    <string name="title">Title</string>
    <string name="hmm">hmm</string>
    <string name="restart">Restart</string>
    <string name="grid">Grid</string>
    <string name="_0">0</string>
    <string name="reset">RESET</string>
    <string name="player">-Player</string>
    <string name="turn">Turn :</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="impossible">Impossible</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="o">O</string>
    <string name="x">X</string>
</resources>